namespaces/live.cloud-platform.service.justice.gov.uk/laa-not-on-libra-auto-search-application-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-not-on-libra-auto-search-application-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ops-team"
    cloud-platform.justice.gov.uk/application: "Not on LIBRA Auto Search Application"
    cloud-platform.justice.gov.uk/owner: "LAA Ops: laa_ops@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-nolasa"
    cloud-platform.justice.gov.uk/team-name: "laa-aws-infrastructure"
    cloud-platform.justice.gov.uk/review-after: "2023-10-20"
